--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 /images/logo2.png
 /config/lm-config.php
 /assets/**
+/info_files/**
 /config/lm-settings.php
 /includes/access_query.php
 lm-debug.log
-
+/.**
 
